# zeek-oracle-expert

./: .oscar-config.yaml  Dockerfile.agent  README.md  check-all.sh  codex-structure.md  multi_agent_chat.py  multi_agent_chat_gui.py  oscar-history.json  overview.html  package-lock.json  package.json
.github/workflows/: ci.yml
inspiration-tools/: agent.py  requirements.txt
inspiration-tools/artifacts/: tool_inventory.yaml
inspiration-tools/azurehound-scenttrail/: .gitignore  LICENSE  README.md  config.ini.example  setup.py
inspiration-tools/capabilities/: README.md
inspiration-tools/graphql/: CONTRIBUTING.md  README.md  abstract_test.go  definition.go  definition_test.go  directives_test.go  enum_type_test.go  executor.go  executor_resolve_test.go  executor_schema_test.go  executor_test.go  extensions.go  extensions_test.go  go.mod  graphql.go  graphql_bench_test.go  graphql_test.go  introspection.go  introspection_test.go  lists_test.go  located.go  mutations_test.go  nonnull_test.go  race_test.go  rules.go  rules_arguments_of_correct_type_test.go  rules_default_values_of_correct_type_test.go  rules_fields_on_correct_type_test.go  rules_fragments_on_composite_types_test.go  rules_known_argument_names_test.go  rules_known_directives_rule_test.go  rules_known_fragment_names_test.go  rules_known_type_names_test.go  rules_lone_anonymous_operation_rule_test.go  (+30 more)
slice_poc/: .gitignore  README.md  requirements.txt  server.py
terraform/: main.tf  outputs.tf  variables.tf
zk-oracle-solana/: README.md
zk-oracle-solana/programs/incentivization/: Cargo.toml
zk-oracle-solana/programs/incentivization/src/: lib.rs
zk-oracle-solana/programs/oracle-data/: Cargo.toml
zk-oracle-solana/programs/oracle-data/src/: lib.rs
zk-oracle-solana/programs/trust-score/: Cargo.toml  program-id.json
zk-oracle-solana/programs/trust-score/src/: lib.rs
zk-oracle-solana/programs/zk-verification/: Cargo.toml
zk-oracle-solana/programs/zk-verification/src/: lib.rs
(+114 files in other folders)
