[package]
name = "incentivization"
version = "0.1.0"
description = "Incentivization program for the Zero-Knowledge Oracle System on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "incentivization"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.0"
anchor-lang = "0.28.0"
thiserror = "1.0.38"
