[package]
name = "trust-score"
version = "0.1.0"
description = "Trust scoring program for the Zero-Knowledge Oracle System on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trust_score"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.17.0"
anchor-lang = "0.29.0"
thiserror = "1.0.38"
