[package]
name = "zk-verification"
version = "0.1.0"
description = "Zero-Knowledge Proof verification program for the Oracle System on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_verification"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.0"
anchor-lang = "0.28.0"
thiserror = "1.0.38"
